Fix for Bug #29490 from Michael Sisolak. Another fine patch; thanks Michael.